run script, clean config

--- a/rsyncd.conf
+++ b/rsyncd.conf
@@ -1,4 +1,6 @@
-# Setup access control and uid/gid according your needs
+[global]
+reverse lookup = no
+
 # Local OpenVAS NVT feed
 [nvt-feed]
   path = /var/lib/openvas/feed-mirror/nvt-feed
@@ -7,7 +9,7 @@
   hosts deny =
   uid = root
   gid = root
- 
+
 # Local OpenVAS SCAP feed
 [scap-data]
   path = /var/lib/openvas/feed-mirror/scap-data
@@ -16,7 +18,7 @@
   hosts deny =
   uid = root
   gid = root
- 
+
 # Local OpenVAS CERT feed
 [cert-data]
   path = /var/lib/openvas/feed-mirror/cert-data
@@ -25,4 +27,4 @@
   hosts deny =
   uid = root
   gid = root
-  
+
